--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:sparkfun_promicro16]
+[env:leonardo]
 platform = atmelavr
-board = sparkfun_promicro16
+board = leonardo
 framework = arduino
 lib_deps = 
 	mheironimus/Joystick@^2.1.1
 	dmadison/XInput@^1.2.6
 	arduino-libraries/Keyboard@^1.0.6
+	arduino-libraries/Mouse@^1.0.1
